--- a/DeviceSettings/res/xml/pref_headset.xml
+++ b/DeviceSettings/res/xml/pref_headset.xml
@@ -3,7 +3,6 @@
     <CheckBoxPreference
         android:key="audio_internalmic_state"
         android:title="@string/pref_internalmic_title"
-        android:defaultValue="false"
-        android:summary="@string/pref_internalmic_summary" />
+        android:defaultValue="false" />
 
 </PreferenceScreen>
