DeviceSettings: Add vibration intensity setting.
Also, modify the context usage upon restoring audio settings, now it will
write the value on startup even though the property itself is set across reboot.

--- a/DeviceSettings/res/values/strings_activity_device_settings.xml
+++ b/DeviceSettings/res/values/strings_activity_device_settings.xml
@@ -2,6 +2,11 @@
 
     <!-- Strings related to Settings -->
 
+    <!-- Settings for General -->
+
+    <string name="pref_vibrator_title">Vibration strength</string>
+    <string name="pref_vibrator_summary">Current voltage: %d mV</string>
+
     <!-- Settings for USB -->
     <string name="pref_header_usb">USB</string>
 
