--- a/DeviceSettings/res/xml/pref_general.xml
+++ b/DeviceSettings/res/xml/pref_general.xml
@@ -1,3 +1,7 @@
-<PreferenceScreen>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <com.cyanogenmod.settings.device.VibratorPreference
+            android:key="vibrator_intensity"
+            android:title="@string/pref_vibrator_title" />
 
 </PreferenceScreen>
