--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -44,6 +44,124 @@
         <item>7</item>
     </integer-array>
 
+    <!-- Flag indicating whether the we should enable the automatic brightness in Settings.
+         Software implementation will be used if config_hardware_auto_brightness_available is not set -->
+    <bool name="config_automatic_brightness_available">true</bool>
+
     <!-- If this is true, the screen will fade off. -->
     <bool name="config_animateScreenLights">false</bool>
+
+    <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
+         The N entries of this array define N + 1 control points as follows:
+         (1-based arrays)
+
+         Point 1:            (0, value[1]):             lux <= 0
+         Point 2:     (level[1], value[2]):  0        < lux <= level[1]
+         Point 3:     (level[2], value[3]):  level[2] < lux <= level[3]
+         ...
+         Point N+1: (level[N], value[N+1]):  level[N] < lux
+
+         The control points must be strictly increasing.  Each control point
+         corresponds to an entry in the brightness backlight values arrays.
+         For example, if LUX == level[1] (first element of the levels array)
+         then the brightness will be determined by value[2] (second element
+         of the brightness values array).
+
+         Spline interpolation is used to determine the auto-brightness
+         backlight values for LUX levels between these control points.
+
+         Must be overridden in platform specific overlays -->
+    <integer-array name="config_autoBrightnessLevels">
+        <item>3</item>
+        <item>6</item>
+        <item>12</item>
+        <item>25</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+        <item>400</item>
+        <item>600</item>
+        <item>800</item>
+        <item>1000</item>
+        <item>1200</item>
+        <item>1400</item>
+        <item>1600</item>
+        <item>1800</item>
+        <item>2000</item>
+    </integer-array>
+
+    <!-- Array of output values for LCD backlight corresponding to the LUX values
+         in the config_autoBrightnessLevels array.  This array should have size one greater
+         than the size of the config_autoBrightnessLevels array.
+         The brightness values must be between 0 and 255 and be non-decreasing.
+         This must be overridden in platform specific overlays -->
+    <integer-array name="config_autoBrightnessLcdBacklightValues">
+        <item>20</item>  <!--     0 -    3 -->
+        <item>30</item>  <!--     3 -    6 -->
+        <item>40</item>  <!--     6 -   12 -->
+        <item>50</item>  <!--    12 -   25 -->
+        <item>60</item>  <!--    25 -   50 -->
+        <item>80</item>  <!--    50 -  100 -->
+        <item>100</item>  <!--  100 -  200 -->
+        <item>120</item>  <!--  200 -  400 -->
+        <item>140</item>  <!--  400 -  600 -->
+        <item>160</item>  <!--  600 -  800 -->
+        <item>180</item>  <!--  800 - 1000 -->
+        <item>200</item>  <!-- 1000 - 1200 -->
+        <item>210</item>  <!-- 1200 - 1400 -->
+        <item>220</item>  <!-- 1400 - 1600 -->
+        <item>230</item>  <!-- 1600 - 1800 -->
+        <item>240</item>  <!-- 1800 - 2000 -->
+        <item>255</item>  <!-- 2000+ -->
+    </integer-array>
+
+    <!-- Array of output values for button backlight corresponding to the LUX values
+         in the config_autoBrightnessLevels array.  This array should have size one greater
+         than the size of the config_autoBrightnessLevels array.
+         The brightness values must be between 0 and 255 and be non-decreasing.
+         This must be overridden in platform specific overlays -->
+    <integer-array name="config_autoBrightnessButtonBacklightValues">
+        <item>20</item>  <!--     0 -    3 -->
+        <item>30</item>  <!--     3 -    6 -->
+        <item>40</item>  <!--     6 -   12 -->
+        <item>50</item>  <!--    12 -   25 -->
+        <item>60</item>  <!--    25 -   50 -->
+        <item>80</item>  <!--    50 -  100 -->
+        <item>100</item>  <!--  100 -  200 -->
+        <item>120</item>  <!--  200 -  400 -->
+        <item>140</item>  <!--  400 -  600 -->
+        <item>160</item>  <!--  600 -  800 -->
+        <item>180</item>  <!--  800 - 1000 -->
+        <item>200</item>  <!-- 1000 - 1200 -->
+        <item>210</item>  <!-- 1200 - 1400 -->
+        <item>220</item>  <!-- 1400 - 1600 -->
+        <item>230</item>  <!-- 1600 - 1800 -->
+        <item>240</item>  <!-- 1800 - 2000 -->
+        <item>255</item>  <!-- 2000+ -->
+    </integer-array>
+
+    <!-- Array of output values for keyboard backlight corresponding to the LUX values
+         in the config_autoBrightnessLevels array.  This array should have size one greater
+         than the size of the config_autoBrightnessLevels array.
+         The brightness values must be between 0 and 255 and be non-decreasing.
+         This must be overridden in platform specific overlays -->
+    <integer-array name="config_autoBrightnessKeyboardBacklightValues">
+        <item>20</item>  <!--     0 -    3 -->
+        <item>30</item>  <!--     3 -    6 -->
+        <item>40</item>  <!--     6 -   12 -->
+        <item>50</item>  <!--    12 -   25 -->
+        <item>60</item>  <!--    25 -   50 -->
+        <item>80</item>  <!--    50 -  100 -->
+        <item>100</item>  <!--  100 -  200 -->
+        <item>120</item>  <!--  200 -  400 -->
+        <item>140</item>  <!--  400 -  600 -->
+        <item>160</item>  <!--  600 -  800 -->
+        <item>180</item>  <!--  800 - 1000 -->
+        <item>200</item>  <!-- 1000 - 1200 -->
+        <item>210</item>  <!-- 1200 - 1400 -->
+        <item>220</item>  <!-- 1400 - 1600 -->
+        <item>230</item>  <!-- 1600 - 1800 -->
+        <item>240</item>  <!-- 1800 - 2000 -->
+        <item>255</item>  <!-- 2000+ -->
+    </integer-array>
 </resources>
