--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -35,17 +35,18 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- internal emulated storage -->
+    <!-- internal storage -->
     <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_internal"
-             android:primary="true"
-             android:emulated="true"
+             android:primary="false"
+             android:emulated="false"
              android:removable="false"
-             android:mtpReserve="100" />
+             android:mtpReserve="100"
+             android:allowMassStorage="true" />
     <!-- external SD card -->
     <storage android:mountPoint="/storage/sdcard1"
              android:storageDescription="@string/storage_sd_card"
-             android:primary="false"
+             android:primary="true"
              android:emulated="false"
              android:removable="true"
              android:allowMassStorage="true" />
