--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -17,6 +17,8 @@
 */
 -->
 
+<!-- See storage config details at http://source.android.com/tech/storage/ -->
+
 <!-- The <device> element should contain one or more <storage> elements.
      Exactly one of these should have the attribute primary="true".
      This storage will be the primary external storage and should have path="/mnt/sdcard".
@@ -39,19 +41,16 @@
     <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_internal"
              android:primary="false"
-             android:emulated="false"
              android:removable="false"
-             android:mtpReserve="100"
              android:allowMassStorage="true" />
     <!-- external SD card -->
     <storage android:mountPoint="/storage/sdcard1"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
-             android:emulated="false"
              android:removable="true"
              android:allowMassStorage="true" />
     <!-- external USB OTG storage -->
-    <storage android:mountPoint="/storage/usbdisk"
+    <storage android:mountPoint="/storage/usbdisk0"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
              android:removable="true" />
