--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -21,6 +21,6 @@
     <bool name="has_in_call_noise_suppression">true</bool>
 
     <!-- Audio parameter for setting noise suppression-->
-    <string name="in_call_noise_suppression_audioparameter">dualmic_enabled=true=false</string>
+    <string name="in_call_noise_suppression_audioparameter" translatable="false">dualmic_enabled=true=false</string>
 
 </resources>
